--- a/reg_form_validation.html
+++ b/reg_form_validation.html
@@ -121,15 +121,17 @@ function validate() {
 
   if (name==null || name==""){  
     alert("Name can't be blank"); 
-    document.myForm.name.focus() ; 
+    document.myForm.name.focus(invalid) ; 
     return false;  
   }
   else if(paswd.test(password)==false){
-  alert("Password must be at least 8 characters long.");  
+  alert("Week Password");  
+  document.myForm.name.focus() ; 
   return false;  
   }
   else if(password2!=password){
     alert("passowrd doesn't match");
+    document.myForm.name.focus() ; 
     return false;
   }
 
